<resources>
    <string name="app_name">BJHL-LivePlayer-UI</string>

    <string name="on_line_user_count">%1$d人在线</string>
    <string name="enter_live_room">进入直播教室</string>
    <string name="live_on_line_user_count_dialog">在线人数（%1$d人）</string>
    <string name="live_speaker_dialog">发言用户</string>
    <string name="video_on">视频中</string>
    <string name="close_speaking">结束发言</string>
    <string name="live_open_video">打开视频</string>
    <string name="live_close_video">关闭视频</string>
    <string name="live_agree">同意</string>
    <string name="live_disagree">拒绝</string>
    <string name="live_publish">发布</string>
    <string name="live_edit">编辑</string>
    <string name="live_cancel">取消</string>
    <string name="live_mic">麦克风</string>
    <string name="live_camera">摄像头</string>
    <string name="live_beauty_filter">美颜</string>
    <string name="live_setting">设置</string>
    <string name="live_full_screen">全屏</string>
    <string name="live_send_message">发送</string>
    <string name="live_overspread">铺满</string>
    <string name="live_setting_ppt">课件展示：</string>
    <string name="live_setting_definition">画质设置：</string>
    <string name="live_setting_definition_low">流畅</string>
    <string name="live_setting_definition_high">高清</string>
    <string name="live_setting_link_type">线路选择：</string>
    <string name="live_setting_link_type_up1">上传1</string>
    <string name="live_setting_link_type_up2">上传2</string>
    <string name="live_setting_link_type_down1">下载1</string>
    <string name="live_setting_link_type_down2">下载2</string>
    <string name="live_setting_camera_switch">摄像头切换：</string>
    <string name="live_setting_camera_switch_front">前</string>
    <string name="live_setting_camera_switch_back">后</string>
    <string name="live_setting_camera_forbid_all">全体禁言</string>
    <string name="live_media_visitor_fail">游客不能举手发言</string>
    <string name="live_media_student_fail">请先举手发言，并等待老师同意</string>
    <string name="live_loading_more">正在加载更多…</string>
    <string name="live_media_speak_apply_agree">老师同意了您的发言</string>
    <string name="live_media_speak_apply_disagree">老师拒绝了您的发言</string>
    <string name="live_media_speak_closed_by_teacher">老师结束了您的发言</string>
    <string name="live_announcement">公告</string>
    <string name="live_cloud_record">录课</string>
    <string name="live_cloud_recording">录课中</string>
    <string name="live_help">求助</string>
    <string name="live_ppt">PPT</string>
    <string name="live_optional_input">选填</string>
    <string name="live_save">保存</string>
    <string name="live_uploading">上传中</string>
    <string name="live_queueing">队列中</string>
    <string name="live_upload_fail">上传失败</string>
    <string name="live_ppt_empty">课件都不给，上课全靠嘴？</string>
    <string name="live_saved">已保存</string>
    <string name="live_upload_new_file">上传新文件</string>
    <string name="live_announcement_hint">输入公告内容</string>
    <string name="live_announcement_url_hint">为公告添加跳转网址</string>
    <string name="live_announcement_view_url_hint">点击公告可以跳转</string>
    <string name="live_recorder_title">采集视频</string>
    <string name="live_recorder_switch_camera">切换摄像头</string>
    <string name="live_recorder_pretty_filter_on">开启美颜</string>
    <string name="live_recorder_pretty_filter_off">关闭美颜</string>
    <string name="live_recorder_camera_switch_off">关闭摄像头</string>
    <string name="live_ppt_manage">管理课件</string>
    <string name="live_ppt_title">PPT</string>
    <string name="live_forbid_raise_hand">禁止举手</string>
    <string name="live_ppt_clear_all">清除</string>
    <string name="live_remove">移除</string>
    <string name="live_image_loading">图片加载中…</string>
    <string name="live_image_uploading">上传中…</string>
    <string name="live_image_loading_fail">图片加载失败</string>

</resources>
