<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:overScrollMode="always">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/LiveTextNormal"
                    android:text="@string/live_mic" />

                <ImageButton
                    android:id="@+id/dialog_setting_mic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:src="@drawable/live_btn_switch" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/LiveTextNormal"
                    android:text="@string/live_camera" />

                <ImageButton
                    android:id="@+id/dialog_setting_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:src="@drawable/live_btn_switch" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/LiveTextNormal"
                    android:text="@string/live_beauty_filter" />

                <ImageButton
                    android:id="@+id/dialog_setting_beauty_filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@null"
                    android:src="@drawable/live_btn_switch" />


            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginLeft="@dimen/activity_live_room_dialog_margin"
            android:background="@color/live_fail" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingTop="@dimen/activity_live_room_dialog_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/LiveTextNormal"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="28dp"
                    android:layout_toLeftOf="@+id/dialog_setting_radio_ppt_fs"
                    android:text="@string/live_setting_ppt" />

                <Button
                    android:id="@+id/dialog_setting_radio_ppt_fs"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/live_radio_btn"
                    android:gravity="center"
                    android:text="@string/live_full_screen"
                    android:textColor="@color/live_white" />

                <Button
                    android:id="@+id/dialog_setting_radio_ppt_os"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/dialog_setting_radio_ppt_fs"
                    android:background="@drawable/live_radio_btn"
                    android:gravity="center"
                    android:text="@string/live_overspread"
                    android:textColor="@color/live_white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/LiveTextNormal"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="28dp"
                    android:layout_toLeftOf="@+id/dialog_setting_radio_definition_low"
                    android:text="@string/live_setting_definition" />

                <Button
                    android:id="@+id/dialog_setting_radio_definition_low"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/live_radio_btn"
                    android:gravity="center"
                    android:text="@string/live_setting_definition_low"
                    android:textColor="@color/live_white" />

                <Button
                    android:id="@+id/dialog_setting_radio_definition_high"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/dialog_setting_radio_definition_low"
                    android:background="@drawable/live_radio_btn"
                    android:gravity="center"
                    android:text="@string/live_setting_definition_high"
                    android:textColor="@color/live_white" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <TextView
                    style="@style/LiveTextNormal"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="28dp"
                    android:layout_toLeftOf="@+id/dialog_setting_radio_link_up_1"
                    android:text="@string/live_setting_link_type" />

                <Button
                    android:id="@+id/dialog_setting_radio_link_up_1"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/live_radio_btn"
                    android:gravity="center"
                    android:text="@string/live_setting_link_type_up1"
                    android:textColor="@color/live_white" />

                <Button
                    android:id="@+id/dialog_setting_radio_link_up_2"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/dialog_setting_radio_link_up_1"
                    android:background="@drawable/live_radio_btn"
                    android:gravity="center"
                    android:text="@string/live_setting_link_type_up2"
                    android:textColor="@color/live_white" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="44dp">

                <Button
                    android:id="@+id/dialog_setting_radio_link_down_1"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/live_radio_btn"
                    android:gravity="center"
                    android:text="@string/live_setting_link_type_down1"
                    android:textColor="@color/live_white" />

                <Button
                    android:id="@+id/dialog_setting_radio_link_down_2"
                    android:layout_width="75dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="40dp"
                    android:layout_toRightOf="@+id/dialog_setting_radio_link_down_1"
                    android:background="@drawable/live_radio_btn"
                    android:gravity="center"
                    android:text="@string/live_setting_link_type_down2"
                    android:textColor="@color/live_white" />

            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>